crates/reinhardt-pages/tests/ui/style/fail/property_mismatch.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! {
	.card {
		width: red;
	}
};
fn main() {}
